ProjectileSystem cleanup
Small linting changes.